[gd_scene load_steps=43 format=2]

[ext_resource path="res://src/Player/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://src/Player/assets/Explosion/1_15.png" type="Texture" id=2]
[ext_resource path="res://src/Player2/Player.gd" type="Script" id=3]
[ext_resource path="res://src/Utils/ScreenShake/ScreenShake.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Player/assets/Explosion/1_17.png" type="Texture" id=5]
[ext_resource path="res://src/Player/assets/Explosion/1_18.png" type="Texture" id=6]
[ext_resource path="res://src/Player/assets/Explosion/1_11.png" type="Texture" id=7]
[ext_resource path="res://src/Player/assets/Explosion/1_19.png" type="Texture" id=8]
[ext_resource path="res://src/Player/assets/Explosion/1_13.png" type="Texture" id=9]
[ext_resource path="res://src/Player/assets/Explosion/1_16.png" type="Texture" id=10]
[ext_resource path="res://src/Player/Explosion.gd" type="Script" id=11]
[ext_resource path="res://src/Player/assets/Explosion/1_14.png" type="Texture" id=12]
[ext_resource path="res://src/Player/assets/Explosion/1_12.png" type="Texture" id=13]
[ext_resource path="res://src/Player/assets/Explosion/1_6.png" type="Texture" id=14]
[ext_resource path="res://src/Player/assets/Explosion/1_3.png" type="Texture" id=15]
[ext_resource path="res://src/Player/assets/Explosion/1_7.png" type="Texture" id=16]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_10.png" type="Texture" id=17]
[ext_resource path="res://src/Player/assets/Explosion/1_8.png" type="Texture" id=18]
[ext_resource path="res://src/Player/assets/Explosion/1_9.png" type="Texture" id=19]
[ext_resource path="res://src/Player/assets/Explosion/1_10.png" type="Texture" id=20]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_11.png" type="Texture" id=21]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_02.png" type="Texture" id=22]
[ext_resource path="res://src/Player/assets/Explosion/1_5.png" type="Texture" id=23]
[ext_resource path="res://src/Player/assets/Explosion/1_4.png" type="Texture" id=24]
[ext_resource path="res://src/Utils/DeathParticles/DeathParticles.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_07.png" type="Texture" id=26]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_00.png" type="Texture" id=27]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_15.png" type="Texture" id=28]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_04.png" type="Texture" id=29]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_05.png" type="Texture" id=30]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_06.png" type="Texture" id=31]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_08.png" type="Texture" id=32]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_12.png" type="Texture" id=33]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_03.png" type="Texture" id=34]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_14.png" type="Texture" id=35]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_13.png" type="Texture" id=36]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_09.png" type="Texture" id=37]
[ext_resource path="res://src/Player2/assets/robotball/skeleton-animation_01.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "Explosion",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 38 ), ExtResource( 22 ), ExtResource( 34 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 32 ), ExtResource( 37 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 33 ), ExtResource( 36 ), ExtResource( 35 ), ExtResource( 28 ) ],
"loop": true,
"name": "Idle",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[sub_resource type="Environment" id=6]
background_mode = 4
tonemap_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 2.0
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ -164.0 ]
}
deathParticle = ExtResource( 25 )

[node name="Explosion2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -34, 39 )
rotation = -1.5708
scale = Vector2( 2.12321, 2.18928 )
frames = SubResource( 4 )
animation = "Explosion"
frame = 12
speed_scale = 2.0
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Explosion2"]
wait_time = 0.5
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1.2, 0.59, 1, 1 )
position = Vector2( -4.76837e-07, 0 )
scale = Vector2( 0.162085, 0.168698 )
frames = SubResource( 1 )
animation = "Idle"
frame = 13
playing = true

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -5, 36 )
rotation = -1.5708
scale = Vector2( 1.78342, 1.7079 )
frames = SubResource( 4 )
animation = "Explosion"
frame = 16
speed_scale = 2.0
playing = true
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Explosion"]
wait_time = 0.5
one_shot = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_bottom = 1080
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.5
drag_margin_right = 0.1
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 4 )]

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[connection signal="grounded_updated" from="." to="Camera2D" method="_on_Player_grounded_updated"]
[connection signal="timeout" from="Explosion2/Timer" to="Explosion2" method="_on_Timer_timeout"]
[connection signal="timeout" from="Explosion/Timer" to="Explosion" method="_on_Timer_timeout"]
